--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ header {
 }
 
 .logo {
-    background: url("../images/rosie.jpg");
+    background: url("../images/Profile picture.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
